--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <p class="lead">This is going to make me a gridding master</p>
 
         <h3>There are 5 tiers to bootstap's gridding system</h3>
+        <h3>3 equal sized columns</h3>
 
         <!-- This will not change based on screen width -->
         <div class="row">
@@ -79,17 +80,38 @@
         </div>
 
         <!-- these are examples of unequal column sizing  -->
-        <h3>These are unequal sized columns</h3>
+        <h3>Three unequal sized columns</h3>
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6"></div>
             <div class="col-md-3"></div>
         </div>
 
+        <!-- this should have 2 columns one column taking up 8 spaces -->
 
+        <h3>2 unequal sized columns</h3>
         <div class="row">
             <div class="col-md-8"></div>
             <div class="col-md-4"></div>
+        </div>
+
+        <h3>Mobile Responsives</h3>
+        <div class="row">
+            <!-- default is width 100% -->
+            <div class="col-md-6"></div>
+            <div class="col-md-6"></div>
+        </div>
+
+        <div class="row">
+            <!-- default is width 100% -->
+            <div class="col-sm-6 col-md-8"></div>
+            <div class="col-sm-6 col-md-4"></div>
+        </div>
+
+        <!-- on a small screen take up 8 out of 12 spaces -->
+        <!-- on a md screen it should take up 12 spaces -->
+        <div class="row">
+            <div class="col-sm-8 col-md-12"></div>
         </div>
     </div>
     </div>
