--- a/index.html
+++ b/index.html
@@ -111,7 +111,41 @@
         <!-- on a small screen take up 8 out of 12 spaces -->
         <!-- on a md screen it should take up 12 spaces -->
         <div class="row">
-            <div class="col-sm-8 col-md-12"></div>
+            <div class="col-sm-12 col-md-6 col-lg-8"></div>
+            <div class="col-sm-12 col-md-6 col-lg-4"></div>
+        </div>
+
+
+        <!-- offsetting -->
+        <h3 class="text-center">Offsetting a single row</h3>
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
     </div>
